--- a/04-missing.Rmd
+++ b/04-missing.Rmd
@@ -6,6 +6,7 @@ library(tidyr)
 library(tidyverse)
 library(ggplot2)
 library(dplyr)
+library(extracat)
 ```
 
 Examine Missing Values for Colonial Data set (created in data cleaning)
@@ -36,8 +37,10 @@ Examining the GDP data available for England we can see that, while there are va
 
 
 Note: I think we can just take this out
+
 Examine Missing Values for Maddison GDP
-{r fig.height = 20}
+
+```{r fig.height = 20}
 MadGDP <- read.csv("Data/MaddisonGDP.csv")
 
 missvalues <- MadGDP %>%gather(key, value, -year) %>%mutate(missing =ifelse(is.na(value), "yes", "no"))
@@ -49,7 +52,7 @@ n <-  ggplot(missvalues, aes(x = key, y =year, fill = missing)) +geom_tile(color
 
 ggsave("MadGDPmissing1800.png", m, width=20, height=20)
 ggsave("MadGDPmissing.png", n, width=20, height=20)
-
+```
 
 
 Examine Missing Values for Maddison per capita GDP
@@ -80,6 +83,8 @@ ggsave("MadPmissingGDPC1800.png", mc1800, width=20, height=20)
 ```
 Looking at this data it's clear that there is very little data available prior to 1800, It only exists for select years ex(500,1000,1500). As in the previous chart we can see that as those years are empty space.
 
+## INSERT FILE HERE ONCE GITHUB UPLOADED
+
 In the graph that provides a closer look at country's per capita GDP's after 1800s. Countries with more data available than others include:
 -South Africa
 -Venezuela
@@ -108,4 +113,26 @@ In the graph that provides a closer look at country's per capita GDP's after 180
 -Australia
 -Argentina
 
-These are some countries that would likely be more interesting to look at in terms of gdp overtime, simply because the data is more available. In terms of countries that have been colonized, looking at the trends in Latin America may be particularly interesting.
+These are some countries that would likely be more interesting to look at in terms of gdp overtime, simply because the data is more available. In terms of countries that have been colonized, looking at the trends in Latin America may be particularly interesting
+
+
+```{r}
+transformations = read.csv('Data/transformations.csv')
+visna(transformations)
+```
+
+Upon inspection, the countries which are missing Data fall into the following patterns:
+- Countries that are missing only one value: Egypt, Jordania, Lesotho. Said values are absent from the original csv presented on the University of Zurich website.
+- Mongolia, who is missing Colonization beginning and end dates, and has all "present" values set to 0. Similarly:
+- Singapour, Brunei and Hong Kong, who have no encoded values. All 4 countires, while presented for the database, seemed to have been considered by the researchers as out of the scope of their studies and their scores should not be considered.
+
+```{r echo=FALSE, eval=FALSE}
+for (r in 1:86) {
+  x = sum(is.na(transformations[r,]))
+  if (x > 0) {
+    print(x)
+    print(transformations[r,1])
+  }
+}
+```
+
