--- a/07-conclusion.Rmd
+++ b/07-conclusion.Rmd
@@ -2,11 +2,10 @@
 
 Answers to the questions
 
-As we went on with our exploration, we felt narrowing the scope at the beginning of the projected would have help us be more focused, as there seemed to be no shortage of historical perspectives to look at and we found ourselves somewhat overwhelmed in where to look more closely. But, narrowing it down also required going deeper in domain knowledge/specific history and that seemed to be outside of our possibilities for this project.
+As we went on with our exploration, we felt narrowing the scope at the beginning of the project would have allowed us to investigate a specific relationship more closely, as there seemed to be no shortage of historical perspectives to look at. We found ourselves somewhat overwhelmed as to where to look more closely. But, narrowing it down also required going deeper in domain knowledge/specific history and that seemed to be outside the scope of this project.
 
-We were disappointed at times by not finding clearer "trends", but it feels like one of the most important take-away from this class was that is easy to stretch and squeeze the data to make trends appear, and if we feel like we have to do so, then we might be looking to confirming our pre-existing assumptions instead of genuinely exploring the data. 
+We were disappointed at times by not finding clearer "trends", but one of the most important take-aways from this class was how easy it is to stretch and squeeze the data to make trends appear, and if we feel like we have to do so, then we might be looking to confirm our pre-existing assumptions instead of genuinely exploring the data. 
 
-We were also confronted with the inner flaws of our data. First, because we were working with almost exclusively man-made data, and not empirical measurement. From the GDP to the indicators, all of our parameters, formula or assessment-based, included human decision and subsequently, bias. Second, because of the nature of the theme, we deeply wanted to look at evolutions of data overtime, which we often time did not have, or have in unequal fashion for different observations, or had to another level of incertitude (the GDP data up to a certain year, for instance, can purely be obtained because of estimation). 
+We were also confronted with the limitations of our data itself. We worked almost exclusively with man-made data, rather than empirical measurements. From the GDP to the indicators, all of our parameters, formula or assessment-based, included human decision and subsequently, bias. In addition, we wanted to look at how the data changed overtime, data which we often did not have, had in an unequal fashion for different observations, or the accuracy of which was very uncertain (the GDP data up to a certain year, for instance, was very approximate). 
 
-With all of those caveats mentionned, the colonial datasets remain rich ressources that try to make sense, in a quantifiable way, of a very complex and time-spanning issue, and we hope that our vizualizations, by a small margin, follow in that direction.
-While 'inconclusive', we feel we have learned a lot just by working with the data and getting a better sense of the factors Historians might look at out, and the shortcomings they may face, while exploring such events.
+With all of those caveats, the colonial datasets remain rich ressources that try to make sense, in a quantifiable way, of a very complex and time-spanning issue. We hope that our vizualizations contribute to that goal. While 'inconclusive', we feel we have learned a lot just by working with the data and getting a better sense of the factors historians might look at more extensively, and the issues they may face regarding quantitative support of their investigations.
